--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Player JavaScript API - simple listener implementation (JS Library agnostic)</h1>
-  <script type="text/javascript" charset="utf-8" src="https://raw.githubusercontent.com/soundcloud/Widget-JS-API/master/soundcloud.player.api.js"></script>
+  <script type="text/javascript" charset="utf-8" src="./sc.js"></script>
   <script type="text/javascript" charset="utf-8">
   
     // ------- a simple auto-play example ----------
