--- a/test.html
+++ b/test.html
@@ -39,13 +39,13 @@
   </object>
   
   <pre>
-    <code>
+    <script>
       soundcloud.addEventListener('onPlayerReady', function(flashId, data) {
         // please refer to the documentation for the full list of available methods
         // btw, here the flash can be accessed too as 'this' like in 'this.api_play()'
         soundcloud.getPlayer(flashId).api_play();
       });
-    </code>
+    </script>
   </pre>
   
 </body>
